--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Authors@R:
     person("Owen", "Winter", , "owenwinter1@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-7478-5099"))
 Description: Themes for ggplots by Owen Winter.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: use_mit_license()
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
